# cgal

AABB_tree/examples/AABB_tree/: AABB_segment_2_example.cpp  AABB_two_level_tree.cpp
AABB_tree/include/CGAL/: AABB_segment_primitive.h  AABB_traits.h  Primary_AABB_traits.h
Advancing_front_surface_reconstruction/include/CGAL/: Advancing_front_surface_reconstruction.h
Alpha_shapes_2/include/CGAL/: Alpha_shape_2.h  Alpha_shape_face_base_2.h  Alpha_shape_vertex_base_2.h
Alpha_shapes_3/include/CGAL/: Alpha_shape_3.h  Alpha_shape_cell_base_3.h  Fixed_alpha_shape_3.h  Fixed_alpha_shape_cell_base_3.h  Fixed_alpha_shape_vertex_base_3.h
Arrangement_on_surface_2/include/CGAL/: Arr_bounded_planar_topology_traits_2.h  Arr_segment_traits_2.h
BGL/examples/BGL_igl/: CMakeLists.txt  main.cpp
BGL/examples/BGL_surface_mesh/: CMakeLists.txt  round_edges_SM.cpp
BGL/test/BGL/: CMakeLists.txt  test_cgal_bgl_named_params.cpp  test_copy_face_graph.cpp  test_draco.cpp
Box_intersection_d/include/CGAL/: box_intersection_d.h
Combinatorial_map/include/CGAL/: Combinatorial_map.h  Combinatorial_map_functors.h  Combinatorial_map_operations.h
Convex_hull_3/test/Convex_hull_3/: quickhull_degenerate_test_3.cpp
Documentation/doc/Documentation/: Installation.txt
Documentation/doc/biblio/: cgal_manual.bib
Generalized_map/include/CGAL/: Generalized_map.h  Generalized_map_operations.h
Generator/include/CGAL/: point_generators_2.h  point_generators_3.h
Hash_map/benchmark/Hash_map/: polyhedron.cpp
Hash_map/include/CGAL/: Unique_hash_map.h
Hyperbolic_surface_triangulation_2/include/CGAL/: Hyperbolic_fundamental_domain_factory_2.h  Hyperbolic_isometry_2.h  Hyperbolic_surface_traits_2.h  Hyperbolic_surface_triangulation_2.h
Hyperbolic_triangulation_2/include/CGAL/: Hyperbolic_Delaunay_triangulation_CK_traits_2.h  Hyperbolic_Delaunay_triangulation_traits_2.h
Installation/: changes.md
Installation/include/CGAL/: atomic.h  mutex.h
Interpolation/examples/Interpolation/: interpolation_2.cpp  natural_neighbors_2.cpp  new-interpolation.cpp  nn3.cpp  sibson_interpolation_2.cpp
Interpolation/include/CGAL/: interpolation_functions.h  natural_neighbor_coordinates_2.h  natural_neighbor_coordinates_3.h  sibson_gradient_fitting.h
Interval_skip_list/include/CGAL/: Interval_skip_list_interval_with_handle.h
Linear_cell_complex/include/CGAL/: Linear_cell_complex_base.h  Linear_cell_complex_constructors.h  import_from_plane_graph.h
Linear_cell_complex/test/Linear_cell_complex/: Linear_cell_complex_2_test.h
Minkowski_sum_2/examples/Minkowski_sum_2/: approx_inset.cpp  exact_inset.cpp  exact_offset.cpp  sum_triangle_square.cpp  sum_with_holes.cpp
Minkowski_sum_2/test/Minkowski_sum_2/: test_exact_offset.cpp  test_minkowski_sum.cpp  test_minkowski_sum_with_holes.cpp
Number_types/include/CGAL/: Interval_nt.h
Number_types/test/Number_types/: CORE_Expr.cpp
Periodic_2_triangulation_2/include/CGAL/: Periodic_2_Delaunay_triangulation_traits_2.h  Periodic_2_triangulation_traits_2.h
Periodic_3_mesh_3/include/CGAL/: Periodic_3_function_wrapper.h  Periodic_3_mesh_triangulation_3.h
Periodic_3_triangulation_3/include/CGAL/: Periodic_3_Delaunay_triangulation_3.h  Periodic_3_Delaunay_triangulation_traits_3.h  Periodic_3_regular_triangulation_3.h  Periodic_3_regular_triangulation_traits_3.h  Periodic_3_triangulation_3.h  Periodic_3_triangulation_traits_3.h
Periodic_4_hyperbolic_triangulation_2/include/CGAL/: Hyperbolic_octagon_translation.h  Periodic_4_hyperbolic_Delaunay_triangulation_2.h
Periodic_4_hyperbolic_triangulation_2/test/Periodic_4_hyperbolic_triangulation_2/: test_p4ht2_matrix.cpp
Polygon/doc/Polygon/: Polygon.txt
Polygon_mesh_processing/doc/Polygon_mesh_processing/: Doxyfile.in  NamedParameters.txt  PackageDescription.txt  Polygon_mesh_processing.txt  examples.txt
Polygon_mesh_processing/examples/Polygon_mesh_processing/: CMakeLists.txt  corefinement_SM.cpp  extract_hull_example.cpp  isotropic_remeshing_with_constraints_example.cpp  partition_example.cpp  partition_example_adv.cpp  polygon_soup_example.cpp
Polyhedron/demo/Polyhedron/: MainWindow.cpp  Scene_polyhedron_item.cpp  Scene_polyhedron_item.h  Scene_surface_mesh_item.cpp
Principal_component_analysis/include/CGAL/: PCA_util.h  PCA_util_Eigen.h  linear_least_squares_fitting_triangles_2.h
Profiling_tools/include/CGAL/: Profile_timer.h  Real_timer.h  Real_timer_impl.h  Timer.h  Timer_impl.h
Profiling_tools/src/CGAL/: Real_timer.cpp  Timer.cpp
Property_map/include/CGAL/: Dynamic_property_map.h
STL_Extension/include/CGAL/: iterator.h
Segment_Delaunay_graph_2/examples/Segment_Delaunay_graph_2/: CMakeLists.txt  sdg-inscribed-circle.cpp
Shape_regularization/doc/Shape_regularization/: PackageDescription.txt  Shape_regularization.txt
Spatial_searching/include/CGAL/: Euclidean_distance.h  Euclidean_distance_sphere_point.h  K_neighbor_search.h  Kd_tree.h  Manhattan_distance_iso_box_point.h  Orthogonal_k_neighbor_search.h  Point_container.h  Weighted_Minkowski_distance.h
Spatial_sorting/include/CGAL/: Hilbert_sort_on_sphere_3.h
Surface_mesh_segmentation/include/CGAL/: mesh_segmentation.h
Surface_mesh_segmentation/test/Surface_mesh_segmentation/: Disk_samplers_test.cpp  Expectation_maximization_test.cpp  (+3 more)
Surface_mesh_simplification/benchmark/: CMakeLists.txt
Surface_mesh_simplification/examples/Surface_mesh_simplification/: CMakeLists.txt  cube-ouvert.off  edge_collapse_OpenMesh.cpp  edge_collapse_all_short_edges.cpp  edge_collapse_bounded_normal_change.cpp  edge_collapse_constrain_sharp_edges.cpp  edge_collapse_constrained_border_polyhedron.cpp  edge_collapse_constrained_border_surface_mesh.cpp  edge_collapse_enriched_polyhedron.cpp  edge_collapse_face_filtered_graph.cpp  edge_collapse_linear_cell_complex.cpp  edge_collapse_polyhedron.cpp  edge_collapse_surface_mesh.cpp  parallel.cpp  parallel_edge_collapse.cpp  parallel_edge_collapse_Polyhedron.cpp  undo_edge_collapse_surface_mesh.cpp
(+136 files in other folders)
